improve memory usage when running in docker image